# finalproject_Samoylov_M25-555

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
valutatrade_hub/: constants.py  decorators.py  logging_config.py  main.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
valutatrade_hub/infra/: database.py  settings.py
valutatrade_hub/parser_service/: api_clients.py  config.py  scheduler.py  storage.py  updater.py
