[tool.poetry]
name = "finalproject-samoylov-m25-555"
version = "0.1.0"
description = "Консольное приложение, имитирующее работу валютного кошелька"
authors = ["IlyaSamoylov <ilya.samoylov2004@mail.ru>"]
readme = "README.md"
packages = [{ include = "valutatrade_hub" }]

[tool.poetry.dependencies]
python = "^3.12"
prettytable = "^3.16.0"
requests = "^2.32.5"

[tool.poetry.scripts]
project = "main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.valutatrade]
data_dir = "data"
log_dir = "logs"
log_level = "DEBUG"
log_format = "json"
default_base_currency = "USD"
rates_ttl_seconds = 300